--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,38 +1,9 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+@import "config";
+@import "menu";
 
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-}
-
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed; // only once without repetition
-      background-size: cover; // fit the 100vh
-
-      &:after {
-        // pseudo-element: not in the html but treat as it is real
-        content: ""; // needed for :before or :after
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: rgba($primary-color, $background-opacity);
-      }
-    }
-  }
-}
-
-html {
-  font-size: 10px;
-}
+// html {
+//   font-size: 10px;
+// }
 
 * {
   box-sizing: border-box;
